--- a/tools/xtrace_option_builder.html
+++ b/tools/xtrace_option_builder.html
@@ -1670,7 +1670,8 @@ function buildAndUpdateResult() {
 	}
 	if (argTracingEnabled) {
 		if (methodSpecForJitExclude != "") {
-			var jitExcludeOption = "-Xjit:exclude={" + methodSpecForJitExclude + "}";
+			methodSpecForJitExclude = escapeHTML(methodSpecForJitExclude);
+			var jitExcludeOption = "-Xjit:exclude={" + methodSpecForJitExclude + "},dontinline={" + methodSpecForJitExclude + "}";
 			warningsHtml += "WARNING: Arguments and return values will only be traced for interpreted methods. Use this JIT exclude option if necessary: <span style=\"white-space: nowrap\">\"" + jitExcludeOption + "\"</span><br>";
 		} else {
 			warningsHtml += "WARNING: Arguments and return values will only be traced for interpreted methods. Use a JIT exclude option if necessary.<br>";
@@ -2785,11 +2786,11 @@ The project website pages cannot be redistributed
 			<b style="font-size: 12pt">Trace Buffer Output</b>
 		</td>
 		<td title="Size of trace buffers - per thread for regular buffers, global for exception buffers">
-			<label for="buffer_size">Buffer size: </label>
-			<input type="number" id="buffer_size" value="8" min="1" max="9999" onchange="processChange(this)">
-			<select id="buffer_size_units" name="buffer_size_units" title="Buffer size units" size="1" onchange="processChange(this)">
-			<option value="k" selected> kilobytes</option>
-			<option value="m"> megabytes </option>
+			<label data-disabled="true" for="buffer_size">Buffer size: </label>
+			<input disabled type="number" id="buffer_size" value="8" min="1" max="9999" onchange="processChange(this)">
+			<select disabled id="buffer_size_units" name="buffer_size_units" title="Buffer size units" size="1" onchange="processChange(this)">
+				<option value="k" selected> kilobytes</option>
+				<option value="m"> megabytes </option>
 			</select>
 		</td>
 		<td title="Dynamically allocate buffers to match IO rate for output file">
