Cerate a static tools directory for option builder
Signed-off-by: Dave Hobbs <dave_hobbs@uk.ibm.com>

--- a/static/tools/xtrace_option_builder.html
+++ b/static/tools/xtrace_option_builder.html
@@ -2666,7 +2666,7 @@ a.remove {
 
 </style>
 
-<link rel="stylesheet" type="text/css" href="../css/oj9_option_builder.css">
+<link rel="stylesheet" type="text/css" href="oj9_option_builder.css">
 
 <!--
 Copyright (c) 2017, 2020 IBM Corp. and others
