--- a/static/tools/xdump_option_builder.html
+++ b/static/tools/xdump_option_builder.html
@@ -1248,7 +1248,7 @@ ul {
 
 </style>
 
-<link rel="stylesheet" type="text/css" href="../css/oj9_option_builder.css">
+<link rel="stylesheet" type="text/css" href="oj9_option_builder.css">
 
 </head>
 
