--- a/static/tools/xdump_option_builder.html
+++ b/static/tools/xdump_option_builder.html
@@ -106,8 +106,8 @@ ul {
 				<label for="event_user">User signal i.e. SIGQUIT ("kill -3") / SIGBREAK</label>
 			</li>
 			<li>
-				<input type="checkbox" id="event_user2"         name="event" value="user2"        data-hasfilter="false">
-				<label for="event_user2">User signal 2 i.e. SIGUSR2 ("kill -12") (Unix only)</label>
+				<input type="checkbox" id="event_user2"         name="event" value="user2"      data-hasfilter="false">
+				<label for="event_user2">User signal 2 i.e. SIGUSR2 (non-Windows only)</label>
 			</li>
 			<li>
 				<input type="checkbox" id="event_gpf"          name="event" value="gpf"         data-hasfilter="false">
